change about.html title

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,12 +1,14 @@
 ---
 permalink: /
-title: "About Me"
+title: 
 excerpt: "About me"
 author_profile: true
 redirect_from: 
   - /about/
   - /about.html
 ---
+
+<h1 class="page__title">About Me</h1>
 
 <p>
   I am Xiaodi Yuan, a senior undergraduate student at <a href="https://iiis.tsinghua.edu.cn/en/">IIIS</a>, 
