minor change to the about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,9 +15,7 @@ redirect_from:
   <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. 
 </p>
 
-<p>My research interest is computer graphics and physics-based simulation. </p>
-
-<p>This is my home page but it's currently under construction. </p>
+<p>My research interests are computer graphics and physics-based simulation. </p>
 
 <hr/>
 
