--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,8 +11,7 @@ redirect_from:
 <h1 class="page__title">About Me</h1>
 
 <p>
-  I am Xiaodi Yuan, a senior undergraduate student at <a href="https://iiis.tsinghua.edu.cn/en/">IIIS</a>, 
-  <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. 
+  I am Xiaodi Yuan, a first-year PhD student at UC San Diego.</a>. 
 </p>
 
 <p>My research interests are computer graphics and physics-based simulation. </p>
