update: profs; last update time

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,7 +11,10 @@ redirect_from:
 <h1 class="page__title">About Me</h1>
 
 <p>
-  I am Xiaodi Yuan, a first-year PhD student at UC San Diego.</a>. 
+  I am Xiaodi Yuan, a first-year PhD student at UC San Diego, advised by Prof. <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>. 
+  I received my B.Eng. degree from <a href="https://iiis.tsinghua.edu.cn/en/">IIIS</a>, Tsinghua University, where I worked with 
+  Prof. <a href="https://ericyi.github.io/">Li Yi</a> on 3D shape reconstruction, 
+  and Prof. <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Tao Du</a> on physics-based simulation.
 </p>
 
 <p>My research interests are computer graphics and physics-based simulation. </p>
