--- a/_pages/about.html
+++ b/_pages/about.html
@@ -30,6 +30,13 @@ redirect_from:
 
 <p>My research interests are computer graphics and physics-based simulation. I am working on building fast and realistic simulation environments for embodied AI.</p>
 
+<h2 class="page__title">Fun Fact</h2>
+
+<p>I appeared on Google Maps Street View <a href="https://www.google.com/maps/@32.8771832,-117.234145,3a,15y,189.69h,82.74t/data=!3m6!1e1!3m4!1s9YyvL52QfKw0LHr4dgWk7A!2e0!7i16384!8i8192?entry=ttu">here</a>!
+  <br />
+  <img src="/images/google-street-view.jpg" alt="Google Street View" style="width:100%;max-width:400px;" />
+</p>
+
 <hr />
 
 <h1 class="page__title">Publications</h1>
