--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,18 +11,18 @@ redirect_from:
 <h1 class="page__title">About Me</h1>
 
 <p>
-  My name is <b>Xiaodi Yuan</b>, and I also go by <b>Ada</b>. <br />
-<details>
+  My name is <b>Xiaodi Yuan</b> (袁小迪), and I also go by <b>Ada</b>. <br />
+<!-- <details>
   <summary><small style="color:gray">More about those names?</small></summary>
   <span style="color:gray">
     <p><b>Chinese name.</b> My name is 袁 (Yuan) 小迪 (Xiaodi) in Chinese. Xiaodi is pronounced like "see-Aw-dee", and Yuan is pronounced like "yoo-An". </p>
     <p><b>Why Ada?</b> I chose this name because (a) I know Xiaodi is hard to pronounce (and it's okay); (b) Ada is lexicographically small; (c) <code>"ada"</code> is a subsequence of <code>"xiaodi yuan"</code>; (d) actually, I named myself after world's first computer programmer, <a href="https://en.wikipedia.org/wiki/Ada_Lovelace">Ada Lovelace</a>.</p>
   </span>
-</details>
+</details> -->
 </p>
 <p>
   I am a first-year PhD student at UC San Diego, advised by Prof. <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>.
-  I received my B.Eng. degree from <a href="https://iiis.tsinghua.edu.cn/en/">IIIS</a>, Tsinghua University, where I
+  I received my B.Eng. degree from <a href="https://iiis.tsinghua.edu.cn/en/">IIIS ("Yao Class")</a>, Tsinghua University, where I
   worked with
   Prof. <a href="https://ericyi.github.io/">Li Yi</a> on 3D shape reconstruction,
   and Prof. <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Tao Du</a> on physics-based simulation.
@@ -30,12 +30,12 @@ redirect_from:
 
 <p>My research interests are computer graphics and physics-based simulation. I am working on building fast and realistic simulation environments for embodied AI.</p>
 
-<h2 class="page__title">Fun Fact</h2>
+<!-- <h2 class="page__title">Fun Fact</h2>
 
 <p>I appeared on Google Maps Street View <a href="https://www.google.com/maps/@32.8771832,-117.234145,3a,15y,189.69h,82.74t/data=!3m6!1e1!3m4!1s9YyvL52QfKw0LHr4dgWk7A!2e0!7i16384!8i8192?entry=ttu">here</a>!
   <br />
   <img src="/images/google-street-view.jpg" alt="Google Street View" style="width:100%;max-width:400px;" />
-</p>
+</p> -->
 
 <hr />
 
