add sph project, adjust css

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -39,7 +39,7 @@ redirect_from:
 
 <hr class="page__hr"/>
 
-<h1 class="page__title">Publications</h1>
+<h1 class="page__title">Publications <a href="publications">[More]</a></h1>
 
 {% for post in site.publications reversed %}
 {% include archive-single.html %}
@@ -47,7 +47,7 @@ redirect_from:
 
 <hr class="page__hr"/>
 
-<h1 class="page__title">Projects</h1>
+<h1 class="page__title">Projects <a href="projects">[More]</a></h1>
 
 {% for post in site.projects reversed %}
 {% include archive-single.html %}
