--- a/_pages/about.html
+++ b/_pages/about.html
@@ -21,7 +21,7 @@ redirect_from:
 </details> -->
 </p>
 <p>
-  I am a first-year PhD student at UC San Diego, advised by Prof. <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>.
+  I am a second-year PhD student at UC San Diego, advised by Prof. <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>.
   I received my B.Eng. degree from <a href="https://iiis.tsinghua.edu.cn/en/">IIIS ("Yao Class")</a>, Tsinghua University, where I
   worked with
   Prof. <a href="https://ericyi.github.io/">Li Yi</a> on 3D shape reconstruction,
